--- a/buoi 4/BaiTap.ipynb
+++ b/buoi 4/BaiTap.ipynb
@@ -145,19 +145,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "2a450b97",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 4 9 16 25 36 49 64 81 169 196 256 "
+     ]
+    }
+   ],
    "source": [
     "#W4A9\n",
     "def scp(n):\n",
     "    if n**0.5==int(n**0.5):\n",
     "        return True\n",
     "    return False\n",
+    "def dif(n):\n",
+    "    l=list(str(n))\n",
+    "    for i in l:\n",
+    "        if l.count(i)>1:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
     "n=int(input())\n",
     "for i in range(1,n+1):\n",
-    "    if scp(i):\n",
+    "    if scp(i) and dif(i):\n",
     "        print(i,end=\" \")"
    ]
   },
@@ -325,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "48d4ba08",
    "metadata": {},
    "outputs": [
@@ -419,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "37dfd5d4",
    "metadata": {},
    "outputs": [
@@ -471,16 +486,337 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "22d9421f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#w4a23\n",
+    "n=int(input())\n",
+    "total=0\n",
+    "for i in range (n):\n",
+    "    total+=i\n",
+    "    if total>=n:\n",
+    "        total-=i\n",
+    "        break\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "da08cb7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4550\n"
+     ]
+    }
+   ],
+   "source": [
+    "#w4a24\n",
+    "a=int(input())\n",
+    "total=0\n",
+    "n=0\n",
+    "while total<=a:\n",
+    "    n+=1\n",
+    "    total+=1/n\n",
+    "print(n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "54739604",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#w4a25\n",
+    "n=int(input())\n",
+    "minn=float('inf')\n",
+    "maxx=0\n",
+    "while n!=-1:\n",
+    "    minn=min(minn,n)\n",
+    "    maxx=max(maxx,n)\n",
+    "    n=int(input())\n",
+    "print(minn,maxx)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "f7126668",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "#w4a26\n",
+    "a=int(input())\n",
+    "fib=[1]*2\n",
+    "target=0\n",
+    "while target<=a:\n",
+    "    target=fib[-1]+fib[-2]\n",
+    "    fib.append(target)\n",
+    "print(fib[-2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "4d98f8bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#w4a27\n",
+    "s=input()\n",
+    "countofword=0\n",
+    "x=False\n",
+    "for i in s:\n",
+    "    if not i.isalpha() and x:\n",
+    "        countofword+=1\n",
+    "    if i.isalpha():\n",
+    "        x=True\n",
+    "    else:\n",
+    "        x=False\n",
+    "print(countofword+1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "95cfa716",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "toi"
+     ]
+    }
+   ],
+   "source": [
+    "#w4a28\n",
+    "s=input()\n",
+    "countofword=0\n",
+    "x=False\n",
+    "for i in s:\n",
+    "    if countofword>0:\n",
+    "        break\n",
+    "    if i.isalpha():\n",
+    "        print(i,end='')\n",
+    "    if not i.isalpha() and x:\n",
+    "        countofword+=1\n",
+    "    if i.isalpha():\n",
+    "        x=True\n",
+    "    else:\n",
+    "        x=False\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "0bc173b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n"
+     ]
+    }
+   ],
+   "source": [
+    "#w4a29\n",
+    "s=input()\n",
+    "k=str()\n",
+    "total=0\n",
+    "for i in s:\n",
+    "    if i==',':\n",
+    "        total+=int(k)\n",
+    "        k=str()\n",
+    "        continue\n",
+    "    k+=i\n",
+    "print(total+int(k))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "id": "a97846dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#w4a30\n",
+    "s=input()\n",
+    "U=0\n",
+    "L=0\n",
+    "N=0\n",
+    "for i in s:\n",
+    "    if i.isupper():\n",
+    "        U+=1\n",
+    "    elif i.islower():\n",
+    "        L+=1\n",
+    "    elif i.isdigit():\n",
+    "        N+=1\n",
+    "print(U,L,N)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "e8f9e739",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "#w4a31\n",
+    "s=input()\n",
+    "total=0\n",
+    "for i in s:\n",
+    "    if str(0)<=i<=str(9):\n",
+    "        total+=int(i)\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "a66edf3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "is not a strong password \n"
+     ]
+    }
+   ],
+   "source": [
+    "#w4a32\n",
+    "s=input()\n",
+    "U=0\n",
+    "L=0\n",
+    "N=0\n",
+    "S=0\n",
+    "for i in s:\n",
+    "    if i.isupper():\n",
+    "        U+=1\n",
+    "    elif i.islower():\n",
+    "        L+=1\n",
+    "    elif i.isdigit():\n",
+    "        N+=1\n",
+    "    else:\n",
+    "        S+=1\n",
+    "print(\"is strong password\") if U>=1 and L>=1 and N>=1 and S>=1 and len(s)>6 else print(\"is not a strong password \")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "9e2b280d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.216.165\n"
+     ]
+    }
+   ],
    "source": [
     "#w4a33\n",
     "n=int(input())\n",
-    "n=str(n)\n",
-    "n=n[::-1]\n",
-    "while len\n",
+    "s=str(n)\n",
+    "s=s[::-1]\n",
+    "k=s[0:3:1]\n",
+    "for i in range (3,len(s),3):\n",
+    "    k=k + '.' + s[i:i+3:1]\n",
+    "print(k[::-1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "c0fedbae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hh\n"
+     ]
+    }
+   ],
+   "source": [
+    "#w4a34\n",
+    "a=input()\n",
+    "b=input()\n",
+    "k=str()\n",
+    "i=0\n",
+    "n=len(a)-len(b)\n",
+    "while i<n:\n",
+    "    k=a[i:i+len(b):1]\n",
+    "    if k==b:\n",
+    "        a=a[:i]+a[i+len(b):]\n",
+    "        i-=1\n",
+    "    i+=1\n",
+    "print(a)\n",
     "\n"
    ]
   }
