--- a/buoi 4/BaiTap.ipynb
+++ b/buoi 4/BaiTap.ipynb
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "id": "a66edf3b",
    "metadata": {},
    "outputs": [
@@ -761,7 +761,7 @@
     "        N+=1\n",
     "    else:\n",
     "        S+=1\n",
-    "print(\"is strong password\") if U>=1 and L>=1 and N>=1 and S>=1 and len(s)>6 else print(\"is not a strong password \")\n"
+    "print(\"is a strong password\") if U>=1 and L>=1 and N>=1 and S>=1 and len(s)>6 else print(\"is not a strong password \")\n"
    ]
   },
   {
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 1,
    "id": "c0fedbae",
    "metadata": {},
    "outputs": [
@@ -799,7 +799,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hh\n"
+      "h\n"
      ]
     }
    ],
