--- a/buoi 4/BaiTap.ipynb
+++ b/buoi 4/BaiTap.ipynb
@@ -799,7 +799,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "h\n"
+      "hh\n",
+      "u\n"
      ]
     }
    ],
@@ -817,7 +818,7 @@
     "        i-=1\n",
     "    i+=1\n",
     "print(a)\n",
-    "\n"
+    "print(b)\n"
    ]
   }
  ],
