--- a/buoi 4/BaiTap.ipynb
+++ b/buoi 4/BaiTap.ipynb
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c0fedbae",
    "metadata": {},
    "outputs": [
@@ -799,8 +799,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hh\n",
-      "u\n"
+      "g\n"
      ]
     }
    ],
@@ -817,8 +816,7 @@
     "        a=a[:i]+a[i+len(b):]\n",
     "        i-=1\n",
     "    i+=1\n",
-    "print(a)\n",
-    "print(b)\n"
+    "print(a)\n"
    ]
   }
  ],
