--- a/buoi 5/baitap.ipynb
+++ b/buoi 5/baitap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "ab3d5fa5",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(8, 7)\n"
+      "7 5\n"
      ]
     }
    ],
@@ -19,7 +19,8 @@
     "def swap(a,b):\n",
     "    return b,a\n",
     "a,b=map(int,input().split())\n",
-    "print(swap(a,b))\n"
+    "a,b=swap(a,b)\n",
+    "print(a,b)\n"
    ]
   }
  ],
