--- a/buoi 5/baitap.ipynb
+++ b/buoi 5/baitap.ipynb
@@ -2,7 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
+   "id": "95ce9f6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#w5a1\n",
+    "def max_of_two_nums(a,b):\n",
+    "    return a if a>b else b\n",
+    "a,b=map(int,input().split())\n",
+    "print (max_of_two_nums(a,b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ab3d5fa5",
    "metadata": {},
    "outputs": [
@@ -15,12 +37,236 @@
     }
    ],
    "source": [
-    "#w5a1\n",
+    "#w5a2\n",
     "def swap(a,b):\n",
     "    return b,a\n",
     "a,b=map(int,input().split())\n",
     "a,b=swap(a,b)\n",
     "print(a,b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8a4f6f3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#w5a3\n",
+    "def isPrime(n):\n",
+    "    for i in range (2,int(n**0.5)+1):\n",
+    "        if n%i==0:\n",
+    "            return False\n",
+    "    return n>1\n",
+    "n=int(input())\n",
+    "print(isPrime(n))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "dc96c4e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#w5a4\n",
+    "def isPerfect(n):\n",
+    "    total=0\n",
+    "    for i in range(1,n):\n",
+    "        if n%i==0:\n",
+    "            total+=i\n",
+    "    return total==n\n",
+    "n=int(input())\n",
+    "print(isPerfect(n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8b096ed0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#w5a5\n",
+    "def index(l,target):\n",
+    "    for i in range(len(l)):\n",
+    "        if l[i]==target:\n",
+    "            return i+1\n",
+    "    return -1\n",
+    "l=list(map(int,input().split()))\n",
+    "target=int(input())\n",
+    "print(index(l,target))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "bad4f807",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "#w5a6\n",
+    "def fac(n):\n",
+    "    res=1\n",
+    "    for i in range(1,n+1):\n",
+    "        res*=i\n",
+    "    return res\n",
+    "n=int(input())\n",
+    "print(fac(n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "9d5d2aa2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.12\n"
+     ]
+    }
+   ],
+   "source": [
+    "#w5a7\n",
+    "def isvalid(s):\n",
+    "    n=len(s)\n",
+    "    if not s[n-1].isdigit(): return False\n",
+    "    for i in range(n):\n",
+    "        if (s[i]=='+' or s[i]=='-' or s[i]=='*' or s[i]=='/') and not s[i+1].isdigit():\n",
+    "            return False\n",
+    "        elif s[i]=='/' and int(s[i+1:])==0: return False\n",
+    "    return True\n",
+    "def mycalculator(s):\n",
+    "    n=len(s)\n",
+    "    for i in range(n):\n",
+    "        if s[i]=='+': \n",
+    "            return float(s[:i]) + float(s[i+1:])\n",
+    "        elif s[i]=='-': \n",
+    "            return float(s[:i]) - float(s[i+1:])\n",
+    "        elif s[i]=='*': \n",
+    "            return float(s[:i]) * float(s[i+1:])\n",
+    "        elif s[i]=='/': \n",
+    "            return float(s[:i]) / float(s[i+1:]) \n",
+    "s=input()\n",
+    "print(f\"{mycalculator(s):.2f}\") if isvalid(s) else print(\"INVALID!!!!!!\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5e51611",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#w5a8\n",
+    "def hamming(x,y):\n",
+    "    a=x^y\n",
+    "    res=0\n",
+    "    while a>0:\n",
+    "        if a%2!=0:\n",
+    "            res+=1\n",
+    "        a//=2\n",
+    "    return res\n",
+    "x,y=map(int,input().split())\n",
+    "print(hamming(x,y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1618b2fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "#w5a9\n",
+    "def sumofnum(n):\n",
+    "    s=str(n)\n",
+    "    sum=0\n",
+    "    for i in s:\n",
+    "        sum+=int(i)\n",
+    "    return sum\n",
+    "n=int(input())\n",
+    "print(sumofnum(n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "3ff499cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#w5a10\n",
+    "def mapping(a,b):\n",
+    "    d=dict()\n",
+    "    for i in range(len(a)):\n",
+    "        if d.get(a[i]) and b[i]!=d[a[i]]:\n",
+    "            return False\n",
+    "        d[a[i]]=b[i]\n",
+    "    return True\n",
+    "a,b=map(str,input().split())\n",
+    "print(mapping(a,b) and mapping(b,a))"
    ]
   }
  ],
