--- a/buoi 5/baitap.ipynb
+++ b/buoi 5/baitap.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "id": "9d5d2aa2",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.12\n"
+      "8.89\n"
      ]
     }
    ],
@@ -170,7 +170,7 @@
     "    for i in range(n):\n",
     "        if (s[i]=='+' or s[i]=='-' or s[i]=='*' or s[i]=='/') and not s[i+1].isdigit():\n",
     "            return False\n",
-    "        elif s[i]=='/' and int(s[i+1:])==0: return False\n",
+    "        elif s[i]=='/' and float(s[i+1:])==0: return False\n",
     "    return True\n",
     "def mycalculator(s):\n",
     "    n=len(s)\n",
