--- a/buoi 6/baitapbuoi6.ipynb
+++ b/buoi 6/baitapbuoi6.ipynb
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "5df783dc",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-3\n"
+      "2\n"
      ]
     }
    ],
@@ -359,12 +359,14 @@
     "            dt[i]+=1\n",
     "        else:\n",
     "            dt[i]=1\n",
-    "    most=float('inf')\n",
+    "    most=1e9\n",
     "    mostvalue=0\n",
     "    for i in dt:\n",
-    "        if (dt[i]>mostvalue and i<most):\n",
+    "        if (dt[i]>mostvalue):\n",
     "            mostvalue=dt[i]\n",
     "            most=i\n",
+    "        elif(dt[i]==mostvalue):\n",
+    "            most=min(most,i)        \n",
     "    return most\n",
     "nums=list(map(int,input().split()))\n",
     "print(commonnums(nums))            "
