--- a/buoi 7/baitapbuoi7.ipynb
+++ b/buoi 7/baitapbuoi7.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "a23f4b0c",
    "metadata": {},
    "outputs": [
@@ -356,12 +356,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "2\n"
      ]
     }
    ],
    "source": [
     "#w7a10\n",
+    "def upper_bound(nums,target,l,r):\n",
+    "    if l>r: return l\n",
+    "    m=(l+r)//2\n",
+    "    if (target<nums[m]): return upper_bound(nums,target,l,m-1)\n",
+    "    else: return upper_bound(nums,target,m+1,r)\n",
     "def moduloM(nums,m):\n",
     "    pre=0\n",
     "    res=0\n",
@@ -378,6 +383,85 @@
     "nums=list(map(int,input().split()))\n",
     "m=int(input())\n",
     "print(moduloM(nums,m))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ab31a22d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#w7a11\n",
+    "def countW(s,k):\n",
+    "    count=0\n",
+    "    for i in range(len(s)-len(k)):\n",
+    "        if(s[i:i+len(k)]==k):count+=1\n",
+    "    return count\n",
+    "s=input()\n",
+    "k=input()\n",
+    "print(countW(s,k))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "73066f34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['duc', 'tien', 'trung']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#w7a12\n",
+    "a=[\"trung\",\"duc\",\"tien\"]\n",
+    "a.sort()\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "32d18f4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#w7a13\n",
+    "def lhs(nums):\n",
+    "    res=0\n",
+    "    d={}\n",
+    "    for i in range(len(nums)):\n",
+    "        if nums[i] in d:\n",
+    "            d[nums[i]]+=1\n",
+    "        else:\n",
+    "            d[nums[i]]=1\n",
+    "    for i in d:\n",
+    "        if i+1 in d:\n",
+    "            res=max(res,d[i]+d[i+1])\n",
+    "    return res\n",
+    "nums=list(map(int,input().split()))\n",
+    "print(lhs(nums))"
    ]
   }
  ],
