--- a/buoi 7/baitapbuoi7.ipynb
+++ b/buoi 7/baitapbuoi7.ipynb
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "id": "bc7aa89e",
    "metadata": {},
    "outputs": [
@@ -228,14 +228,24 @@
    ],
    "source": [
     "#w7a7\n",
+    "def lower_bound(nums,target,l,r):\n",
+    "    if l>r: return l\n",
+    "    m=(l+r)//2\n",
+    "    if (nums[m]==target): return m\n",
+    "    elif(nums[m]>target): return lower_bound(nums,target,l,m-1)\n",
+    "    else: return lower_bound(nums,target,m+1,r)\n",
     "def incre(nums):\n",
     "    if len(nums)==0: return 0\n",
-    "    l=[nums[0]]\n",
+    "    l=[]\n",
+    "    res=0\n",
     "    for i in range(len(nums)):\n",
-    "        if nums[i]<=l[-1]:\n",
-    "            l.pop()\n",
-    "        l.append(nums[i])\n",
-    "    return len(l)\n",
+    "        j=lower_bound(l,nums[i],0,len(l)-1)\n",
+    "        res=max(res,j+1)\n",
+    "        if j<len(l):\n",
+    "            l[j]=nums[i]\n",
+    "        else:\n",
+    "            l.append(nums[i])\n",
+    "    return res\n",
     "nums=list(map(int,input().split()))\n",
     "print(incre(nums))"
    ]
