--- a/buoi 7/baitapbuoi7.ipynb
+++ b/buoi 7/baitapbuoi7.ipynb
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "bc7aa89e",
    "metadata": {},
    "outputs": [
@@ -231,28 +231,25 @@
     "def lower_bound(nums,target,l,r):\n",
     "    if l>r: return l\n",
     "    m=(l+r)//2\n",
-    "    if (nums[m]==target): return m\n",
-    "    elif(nums[m]>target): return lower_bound(nums,target,l,m-1)\n",
+    "    if(nums[m]>=target): return lower_bound(nums,target,l,m-1)\n",
     "    else: return lower_bound(nums,target,m+1,r)\n",
     "def incre(nums):\n",
     "    if len(nums)==0: return 0\n",
     "    l=[]\n",
-    "    res=0\n",
     "    for i in range(len(nums)):\n",
     "        j=lower_bound(l,nums[i],0,len(l)-1)\n",
-    "        res=max(res,j+1)\n",
     "        if j<len(l):\n",
     "            l[j]=nums[i]\n",
     "        else:\n",
     "            l.append(nums[i])\n",
-    "    return res\n",
+    "    return len(l)\n",
     "nums=list(map(int,input().split()))\n",
     "print(incre(nums))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "cc6da76e",
    "metadata": {},
    "outputs": [
@@ -269,8 +266,7 @@
     "def lower_bound(nums,target,l,r):\n",
     "    if l>r: return l\n",
     "    m=(l+r)//2\n",
-    "    if (nums[m]==target): return m\n",
-    "    elif(nums[m]>target): return lower_bound(nums,target,l,m-1)\n",
+    "    if(nums[m]>=target): return lower_bound(nums,target,l,m-1)\n",
     "    else: return lower_bound(nums,target,m+1,r)\n",
     "def upper_bound(nums,target,l,r):\n",
     "    if l>r: return l\n",
