--- a/buoi 7/baitapbuoi7.ipynb
+++ b/buoi 7/baitapbuoi7.ipynb
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bc7aa89e",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "1\n"
      ]
     }
    ],
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "428e0c3b",
    "metadata": {},
    "outputs": [
@@ -307,7 +307,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 3, 1, 1, 0]\n"
+      "[2, 1, 1, 0]\n"
      ]
     }
    ],
@@ -468,6 +468,40 @@
     "    return res\n",
     "nums=list(map(int,input().split()))\n",
     "print(lhs(nums))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "483246ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(11,2,2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Point3:\n",
+    "    def __init__(self,x,y,z):\n",
+    "        self.x=x\n",
+    "        self.y=y\n",
+    "        self.z=z\n",
+    "    def translate(self,newx,newy,newz):\n",
+    "        self.x+=newx\n",
+    "        self.y+=newy\n",
+    "        self.z+=newz\n",
+    "    def __str__(self):\n",
+    "        return f\"({self.x},{self.y},{self.z})\"\n",
+    "p = Point3(1,2,3)\n",
+    "p.translate(10, 0, -1)\n",
+    "\n",
+    "assert (p.x, p.y, p.z) == (11,2,2)\n",
+    "\n",
+    "print(str(p))\n"
    ]
   }
  ],
