--- a/baitapbuoi8.ipynb
+++ b/baitapbuoi8.ipynb
@@ -147,6 +147,130 @@
     "\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d891850e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#5\n",
+    "class ShoppingCart:\n",
+    "    def __init__(self):\n",
+    "        self.cart=[]\n",
+    "        self.price={}\n",
+    "    def add(self):\n",
+    "        nameitem=input(\"Nhap ten san pham: \")\n",
+    "        try:\n",
+    "            priceitem=int(input(\"Gia cua san pham: \"))\n",
+    "        except:\n",
+    "            print(\"Du lieu khong hop le!\")\n",
+    "            return\n",
+    "        self.cart.append(nameitem)\n",
+    "        self.price[nameitem]=priceitem\n",
+    "        print(\"Cap nhat thanh cong!\")\n",
+    "    def remove(self):\n",
+    "        name=input(\"Vui long nhap ten mat hang: \")\n",
+    "        for item in self.cart:\n",
+    "            if (name==item):\n",
+    "                self.cart.remove(item)\n",
+    "                del self.price[item]\n",
+    "                print(\"Xoa mat hang thanh cong!!\")\n",
+    "                return\n",
+    "        print(\"Khong ton tai mat hang trong gio!!\")\n",
+    "    def empty(self):\n",
+    "        print(\"Gio hang trong!!\") if len(self.cart)==0 else print(f\"Gio hang co {len(self.cart)} san pham\")\n",
+    "    def total(self):\n",
+    "        sum=0\n",
+    "        for i in self.price:\n",
+    "            sum+=self.price[i]\n",
+    "        print(f\"Tong tien mat hang trong gio: {sum}vnd\")\n",
+    "    def show(self):\n",
+    "        if len(self.cart)==0: print(\"Khong ton tai mat hang trong gio!!\")\n",
+    "        else: \n",
+    "            print(\"----------GIO HANG CUA BAN----------\")\n",
+    "            for i in range(len(self.cart)):\n",
+    "                print(f\"{i+1}. {self.cart[i]} : {self.price[self.cart[i]]}vnd\")\n",
+    "    def clear(self):\n",
+    "        self.cart.clear()\n",
+    "        self.price.clear()\n",
+    "        print(\"Da xoa toan bo gio hang!!!\")\n",
+    "def main():\n",
+    "    s=input(\"Ban co muon tham gia chuong(yes->): \")\n",
+    "    if s==\"yes\":\n",
+    "        sc=ShoppingCart()\n",
+    "        while(1):\n",
+    "            print(\"---------SHOPPING-CART-----------\")\n",
+    "            print(\"|                               |\")\n",
+    "            print(\"|            1.ADD              |\")\n",
+    "            print(\"|            2.REMOVE           |\")\n",
+    "            print(\"|            3.EMPTY            |\")\n",
+    "            print(\"|            4.SUM              |\")\n",
+    "            print(\"|            5.SHOW             |\")\n",
+    "            print(\"|            6.CLEAR            |\")\n",
+    "            print(\"|            0.QUIT             |\")\n",
+    "            print(\"|                               |\")\n",
+    "            print(\"---------------------------------\")\n",
+    "            choice=input(\"Vui long nhap lua chon: \")\n",
+    "            while(not str(0)<=choice<=str(6)):choice=input(\"Du lieu khong hop le vui long nhap lai: \")\n",
+    "            if choice==\"1\": sc.add()\n",
+    "            elif choice==\"2\": sc.remove()\n",
+    "            elif choice==\"3\": sc.empty()\n",
+    "            elif choice==\"4\": sc.total()\n",
+    "            elif choice==\"5\": sc.show()\n",
+    "            elif choice==\"6\": sc.clear()\n",
+    "            else:\n",
+    "                print(\"Ban muon thoat chuong trinh?\")\n",
+    "                yes=input(\"Vui long nhap /yes/ de thoat chuong trinh: \")\n",
+    "                if yes==\"yes\":\n",
+    "                    print(\"Da thoat chuong trinh!!!\")\n",
+    "                    break\n",
+    "    print(\"GOODBYE:((\")\n",
+    "    return          \n",
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "641fb463",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40.0 28.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#6\n",
+    "class Rectangle:\n",
+    "     def __init__(self,length,width):\n",
+    "          self.l=length\n",
+    "          self.w=width\n",
+    "     def area(self):\n",
+    "          return self.l*self.w\n",
+    "     def perimeter(self):\n",
+    "          return (self.l+self.w)*2\n",
+    "     def scale(self,k):\n",
+    "          self.l*=k\n",
+    "          self.w*=k\n",
+    "w,h,k=map(float,input().split())\n",
+    "rec=Rectangle(w,h)\n",
+    "rec.scale(k)\n",
+    "print(rec.area(),rec.perimeter())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb566f9c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
